tests/valid/arithmetic.cl
class Main {
   main(): Int {
       let
         x : Int <- 5,
         y : Int <- 3
       in {
         (x + y) * (x - y);
       }
   };
};
